final 1.3 the last version (Main)